fix the bug of extra space of the layout

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1098,7 +1098,9 @@ h6 {
     font-size: 14px;
     margin-left: 0;
     margin-top: 10px;
-    white-space: pre;
+    white-space: pre-wrap;
+    word-break: break-word;
+    padding-right: 20px;
 }
 
 #schedule .schedule-item .item-body, #schedule .schedule-item .item-title {
